--- a/GameServer/public/index.html
+++ b/GameServer/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <title>My Game</title>
+
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -13,18 +13,6 @@
     <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
-    <div id="gameWrapper">
-        <div id="messageBoard"></div>
-
-        <div id="roomStatus">
-
-        </div>
-        <div id="controls">
-            <div id="addPlayerWrapper">
-                <input type="text" id="playerName" />
-                <button id="addPlayer">Add Player</button>
-            </div>
-        </div>
-    </div>
+    <div id="gameWrapper"></div>
 </body>
 </html>
