--- a/GameServer/public/index.html
+++ b/GameServer/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
-    <div id="gameWrapper"></div>
+    <div id="gameWrapper">
+
+    </div>
 </body>
 </html>
