--- a/GameServer/public/index.html
+++ b/GameServer/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -10,11 +11,16 @@
             crossorigin="anonymous"></script>
 
     <script type="application/javascript" src="/static/index.js"></script>
+
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
     <div id="gameWrapper">
+        <section id="players">
 
+        </section>
     </div>
 </body>
 </html>
